# gnome-system-monitor

./: .cvsignore  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog.pre-git  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  acconfig.h  autogen.sh  check-style.py  configure.ac  configure.in  git.mk  gnome-doc-utils.make  gnome-system-monitor-kde.desktop.in  gnome-system-monitor-kde.desktop.in.in  gnome-system-monitor.appdata.xml  gnome-system-monitor.appdata.xml.in  gnome-system-monitor.desktop.in  gnome-system-monitor.desktop.in.in  gnome-system-monitor.doap  gnome-system-monitor.spec  meson.build  meson_options.txt  meson_post_install.py  org.gnome.SystemMonitor.desktop.in  org.gnome.gnome-system-monitor.policy.in  org.gnome.gnome-system-monitor.policy.in.in  procman.desktop  procman.desktop.in  procman.spec
GNOME_SYSTEM_MONITOR_2_17_94/: AUTHORS  ChangeLog  Makefile.am  NEWS  configure.in
GNOME_SYSTEM_MONITOR_2_17_94/debian/: files  menu
GNOME_SYSTEM_MONITOR_2_17_94/help/: Makefile.am
GNOME_SYSTEM_MONITOR_2_17_94/help/C/: gnome-system-monitor.xml
GNOME_SYSTEM_MONITOR_2_17_94/help/bg/: bg.po
GNOME_SYSTEM_MONITOR_2_17_94/omf-install/: Makefile.am
GNOME_SYSTEM_MONITOR_2_17_94/pixmaps/: side.xcf
GNOME_SYSTEM_MONITOR_2_17_94/po/: LINGUAS  ca.po  da.po  en_GB.po  es.po  eu.po  fa.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  ka.po  li.po  lt.po  mk.po  ms.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  rw.po  sv.po  ta.po  th.po  tr.po
GNOME_SYSTEM_MONITOR_2_17_94/src/: callbacks.h  defaulttable.h  e_date.c  interface.cpp  load-graph.cpp  load-graph.h  memmaps.cpp  openfiles.cpp  openfiles.h  prettytable.cpp  procactions.h  procdialogs.cpp  procman.h  procman_gksu.h  procman_gnomesu.h  proctable.h  sysinfo.cpp  util.cpp  util.h
data/: #menus.ui#  disks.ui  gnome-system-monitor-kde.desktop.in.in  gnome-system-monitor.appdata.xml.in  gnome-system-monitor.appdata.xml.in.in  gsm.css  help-overlay.ui  interface.ui  interface.ui~  interface2.ui  lsof.ui  memmaps.ui  menus.ui  meson.build  openfiles.ui  org.gnome.SystemMonitor.appdata.xml  org.gnome.SystemMonitor.appdata.xml.in.in  org.gnome.SystemMonitor.desktop.in.in  org.gnome.SystemMonitor.metainfo.xml.in.in  org.gnome.SystemMonitor.service.in  popups.ui  preferences.ui  procproperties.ui  renice.ui  setaffinity.ui  shortcuts-dialog.ui
data/icons/: meson.build
help/: ChangeLog  LINGUAS  Makefile.am  gnome-system-monitor.pot  meson.build
help/C/: .cvsignore  Makefile.am  commandline.page  cpu-check.page  cpu-mem-normal.page  cpu-multicore.page  fs-device.page  fs-diskusage.page  fs-info.page  fs-showall.page  gnome-system-monitor-C.omf  gnome-system-monitor.xml  index.docbook  index.page  l10n.txt  mem-check.page  mem-swap.page  memory-map-use.page  memory-map-what.page  memory-map-what.page.stub  net-bits.page  net-check.page  process-columns.page  process-end-kill.page  process-explain.page  process-files.page  process-forcequit.page  process-identify-file.page  process-identify-hog.page  process-kill.page  process-loadaverage.page  process-many.page  process-priority-change.page  process-priority-what.page  process-status.page  process-update-speed.page  procman-C.omf  procman.sgml  solaris-mode.page  units.page
help/ar/: ar.po
help/bg/: .cvsignore  Makefile.am  bg.po  gnome-system-monitor-bg.omf  gnome-system-monitor.xml  legal.xml
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/kk/: kk.po
help/ko/: ko.po
help/oc/: oc.po
help/pa/: pa.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sv/: sv.po
help/te/: te.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
scripts/: Makefile.am  gsm_execute_helper.c  meson.build
src/: .cvsignore  ChangeLog  Changelog  Makefile.am  README.hacking  application.cpp  application.h  argv.cpp  argv.h  bacon-message-connection.c  bacon-message-connection.h  callbacks.c  callbacks.cpp  callbacks.h  cellrenderer.c  cellrenderer.h  cgroups.cpp  cgroups.h  column-view-persister.c  column-view-persister.h  defaulttable.h  disk.c  disk.h  disks-data.c  disks-data.h  disks.c  disks.cpp  disks.h  e_date.c  e_date.h  favorites.c  favorites.cpp  favorites.h  gconf-keys.cpp  gconf-keys.h  gnome-system-monitor.schemas  gnome-system-monitor.schemas.in  gsm-chart-line.c  gsm-chart-line.h  gsm-graph.c  (+116 more)
src-ng/: application.c  gsm-ng.gresource.xml  meson.build  org.gnome.gnome-system-monitor.gschema.xml.in
src/action-impls/: gsm-kill.c  gsm-kill.h  gsm-setaffinity.c  gsm-setaffinity.h  gsm-setpriority.c  gsm-setpriority.h  meson.build
src/actions/: gsm-actions.c  gsm-actions.h  gsm_gksu.cpp  gsm_gksu.h  gsm_gnomesu.cpp  gsm_gnomesu.h  gsm_pkexec.cpp  gsm_pkexec.h  meson.build
src/cgroups/: cgroups.c  cgroups.cpp  gsm-cgroups.c  gsm-cgroups.cpp  gsm-cgroups.h  meson.build  test.c  test.cpp
src/charts/: gsm-cpu-graph.c  gsm-cpu-graph.h  gsm-cpu-model.c  gsm-cpu-model.h  meson.build
src/legacy/: Makefile.am  e_date.c  e_date.h  gsm_color_button.c  gsm_color_button.h  meson.build  treeview.c  treeview.h
src/selinux/: gsm-selinux.c  meson.build  selinux.c  selinux.h
src/systemd/: gsm-systemd.c  gsm-systemd.h  meson.build  systemd.c
src/test/: cgroups.cpp  join.cpp  meson.build
uber/: Makefile.am  g-ring.h  uber-graph.c  uber-graph.h  uber-label.c  uber-line-graph.c  uber-line-graph.h  uber-line-info.c  uber-line-info.h  uber-window.c  uber-window.h  uber.h
uber/.deps/: libuber_1_0_la-g-ring.Plo  libuber_1_0_la-uber-frame-source.Plo  libuber_1_0_la-uber-graph.Plo  libuber_1_0_la-uber-heat-map.Plo  libuber_1_0_la-uber-label.Plo  libuber_1_0_la-uber-line-graph.Plo  libuber_1_0_la-uber-range.Plo  libuber_1_0_la-uber-scale.Plo  libuber_1_0_la-uber-scatter.Plo  libuber_1_0_la-uber-timeout-interval.Plo  libuber_1_0_la-uber-window.Plo
(+180 files in other folders)
